# ploomber

./: .coveragerc  .gitignore  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  bootstrap.sh  conftest.py  downstream.py  environment.yml  install_test_pkg.sh  nb.py  pipeline.yaml  postBuild  pyproject.toml  readthedocs.yaml  requirements-colab.lock.txt  requirements.txt  sample_package.sh  setup.cfg  setup.py  task.py  tasks.py  test_pkg.sh  upstream.py  versioneer.py
.githooks/: pre-push
.github/: pull_request_template.md
Projects/: Amazon Kaggle Project.ipynb  Image Resize Application.py  Managing the Quality Metric of Global Ecological Footprint.ipynb  Predicting Energy Efficiency of Buildings.ipynb
autocompleter_editor/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
autocompleter_editor/.github/workflows/: build.yml  check-release.yml
autocompleter_editor/autocompleter_editor/: __init__.py  _version.py
autocompleter_editor/src/: autocompleter.ts  index.ts
autocompleter_editor/src/__tests__/: autocompleter_editor.spec.ts
autocompleter_editor/style/: base.css
autocompleter_editor/ui-tests/: jupyter_server_test_config.py  package.json
autocompleter_editor/ui-tests/tests/: autocompleter_editor.spec.ts
doc/: CONTRIBUTING.md  Makefile  api-summary.rst  api.rst  api_index.rst  api_summary.rst  conf.py  contents.rst  environment.yml  examples.rst  faq_index.rst  features.rst  guide_index.rst  (+14 more)
(+1182 files in other folders)
