[metadata]
description-file = README.md

[flake8]
# files in ploomber_add/ are jinja templates, not Python source files
# CONTRIBUTING.md shows how to create a venv and the sample command creates it in a ploomber-venv directory
# TODO: fix functions.py and remove it from here
exclude = src/ploomber/resources/ploomber_add, build/, tests/assets/test_pkg/src/test_pkg/functions.py, ploomber-venv
